--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -25,3 +25,7 @@ RUN apk update && \
     /usr/bin/mysql*
 
 ADD . ${HOME}
+
+EXPOSE 3000
+
+CMD ["bundle", "exec", "rails", "s", "puma", "-b", "0.0.0.0", "-p", "3000", "-e", "production"]
